deps/v8/test/message/fail/destructuring-array-non-iterable-undefined.out
*%(basename)s:6: TypeError: x is not iterable
var [y] = x;
          ^
TypeError: x is not iterable
    at *%(basename)s:6:11
